Changed login to use req.body instead of req.query
