# config/seng365-2018_auction_0.0.7_swagger.json
@@ -1309,6 +1309,24 @@
           "email",
           "password"
         ]
+      },
+      "LoginUser": {
+        "title": "LoginUser",
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        },
+        "required":[
+          "password"
+        ]
       }
     },
     "securitySchemes": {
